CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (lizard)

INCLUDE (Version.cmake)

FIND_PACKAGE (Boost 1.35.0 COMPONENTS thread REQUIRED)
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
FIND_LIBRARY (LJUDY Judy)
FIND_PATH (IJUDY Judy.h)
INCLUDE_DIRECTORIES (${IJUDY})
FIND_LIBRARY (LEXPAT expat)
FIND_PATH (IEXPAT expat.h)
INCLUDE_DIRECTORIES (${IEXPAT})

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR})


MATH(EXPR LIZARD_VERSION_INT_STR "${LIZARD_VERSION_MAJOR} * 10000 + ${LIZARD_VERSION_MINOR} * 100 + ${LIZARD_VERSION_PATCH}")
CONFIGURE_FILE ("${CMAKE_SOURCE_DIR}/include/Version.h.in" "${CMAKE_BINARY_DIR}/lizard/Version.h")

ADD_SUBDIRECTORY (src)
